Cleaned up the code.
Issues: Error handling basically not there. Entity Framework doesn't like having a table without a primary key. Unit tests also aren't doing anything. Not sure what's going on there. Everything else is working, though.

--- a/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,5 +1,4 @@
-@using WebApplication2.Areas.HelpPage
-@model InvalidSample
+@model WebApplication2.Areas.HelpPage.InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
 {
