--- a/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
+++ b/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
@@ -1,5 +1,4 @@
-@using WebApplication2.Areas.HelpPage
-@model TextSample
+@model WebApplication2.Areas.HelpPage.TextSample
 
 <pre class="wrapped">
 @Model.Text
