--- a/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
+++ b/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
@@ -1,5 +1,5 @@
 @using WebApplication2.Areas.HelpPage.ModelDescriptions
-@model CollectionModelDescription
+@model WebApplication2.Areas.HelpPage.ModelDescriptions.CollectionModelDescription
 @if (Model.ElementDescription is ComplexTypeModelDescription)
 {
     @Html.DisplayFor(m => m.ElementDescription)
