--- a/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
+++ b/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
@@ -1,3 +1,2 @@
-@using WebApplication2.Areas.HelpPage.ModelDescriptions
-@model ComplexTypeModelDescription
+@model WebApplication2.Areas.HelpPage.ModelDescriptions.ComplexTypeModelDescription
 @Html.DisplayFor(m => m.Properties, "Parameters")
