--- a/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
+++ b/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
@@ -1,4 +1,3 @@
-@using WebApplication2.Areas.HelpPage
-@model ImageSample
+@model WebApplication2.Areas.HelpPage.ImageSample
 
-<img src="@Model.Src" />
+<img src="@Model.Src"/>
