--- a/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
+++ b/WebApplication2/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
@@ -1,3 +1,2 @@
-@using WebApplication2.Areas.HelpPage.ModelDescriptions
-@model SimpleTypeModelDescription
+@model WebApplication2.Areas.HelpPage.ModelDescriptions.SimpleTypeModelDescription
 @Model.Documentation
